--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,9 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<%= link_to 'Home', root_path %>
+<%= link_to 'Users', users_path %>
+<%= link_to 'Groups', groups_path %>
 <%= yield %>
 
 </body>
