--- a/app/views/users/add_group.html.erb
+++ b/app/views/users/add_group.html.erb
@@ -2,3 +2,9 @@
 
 <%= @user.name %>
 
+<%= form_for(@user, url: save_group_under_user_path(@user), html: {method: "post"})  do |f| %>
+  <%= f.collection_select(:groups, @groups,:id,:name)%>
+  <%= f.submit "Add Group", :class => "btn btn-large btn-primary" %>
+<% end %>
+
+
