--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,16 @@
   <%= @user.email %>
 </p>
 
+<p>
+  <strong>Groups:</strong>
+  <% @user.groups.each do |group| %>
+      <tr>
+        <td><%= group.name %></td>
+      </tr>
+    <% end %>
+
+</p>
+
 <h2>Posts</h2>
 <table>
   <thead>
